--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <main>
         <section class="buttons">
+            <button data-filter="*">Todos</button>
             <button data-filter=".type-fire">Fuego</button>
             <button data-filter=".type-water">Agua</button>
             <button data-filter=".type-grass">Planta</button>
@@ -32,7 +33,7 @@
             </div>
             <div class="card type-grass">
                 <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png" alt="">
-                <p class="number">7</p>
+                <p class="number">1</p>
                 <h2 class="name">Bulbasaur</h2>
                 <p>Tipo: Planta</p>
             </div>
@@ -41,6 +42,8 @@
 
     </main>
 
+    <!-- JQUERY -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- ISOTOPE JS -->
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
     <!-- MI SCRIPT -->
