--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     
     <main>
         <section class="btns-cont">
-            <button data-filter=".type-fire">Fuego</button>
-            <button data-filter=".type-water">Agua</button>
-            <button data-filter=".type-grass">Planta</button>
+            <button class="filter" data-filter=".type-fire">Fuego</button>
+            <button class="filter" data-filter=".type-water">Agua</button>
+            <button class="filter" data-filter=".type-grass">Planta</button>
+            <button class="sort" data-sort-by="number">Por número</button>
+            <button class="sort" data-sort-by="name">Alfabéticamente</button>
         </section>
 
         <section class="poke-cont">
