--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>POKEDEX</title>
+    <!-- BS CSS  -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -11,35 +13,30 @@
     
     <main>
         <section class="btns-cont">
+            <button class="filter" data-filter="*">Todos</button>
             <button class="filter" data-filter=".type-fire">Fuego</button>
             <button class="filter" data-filter=".type-water">Agua</button>
             <button class="filter" data-filter=".type-grass">Planta</button>
-            <button class="sort" data-sort-by="number">Por número</button>
-            <button class="sort" data-sort-by="name">Alfabéticamente</button>
+            <button class="filter" data-filter=".type-electric">Eléctrico</button>
+            <button class="sort" data-sortby="number">Ordenar por número</button>
+            <button class="sort" data-sortby="name">Ordenar A-Z</button>
         </section>
 
-        <section class="poke-cont">
+        <section class="container">
 
-            <div class="card type-fire">
+            <div id="pokeCont" class="row justify-content-center">
+
+            </div>
+
+            <!-- <div class="card type-fire">
                 <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/4.png" alt="">
                 <p class="number">4</p>
                 <h2 class="name">Charmander</h2>
                 <p>Tipo: Fuego</p>
-            </div>
-            <div class="card type-water">
-                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/7.png" alt="">
-                <p class="number">7</p>
-                <h2 class="name">Squirtle</h2>
-                <p>Tipo: Agua</p>
-            </div>
-            <div class="card type-grass">
-                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png" alt="">
-                <p class="number">1</p>
-                <h2 class="name">Bulbasaur</h2>
-                <p>Tipo: Planta</p>
-            </div>
+            </div> -->
 
         </section>
+
     </main>
 
     <!-- JQUERY -->
@@ -47,6 +44,9 @@
     
     <!-- ISOTOPE  -->
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
+
+    <!-- API CALL SCRIPT -->
+    <script src="js/listPokemon.js"></script>
 
     <!-- MI PROPIO JS -->
     <script src="js/script.js"></script>
