--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <div class="row text-center">
                 <h1>POKEDEX</h1>
                 <h2>Aqui estan los Pokemons!</h2>
+                <h3>Esto es una prueba</h3>
             </div>
         </div>
 
